project( chapter_01 )

set ( TARGET_NAME "q1-1" )
add_subdirectory ( ${TARGET_NAME} )

set ( TARGET_NAME "q1-2" )
add_subdirectory ( ${TARGET_NAME} )

set ( TARGET_NAME "q1-3" )
add_subdirectory ( ${TARGET_NAME} )

set ( TARGET_NAME "q1-4" )
add_subdirectory ( ${TARGET_NAME} )

set ( TARGET_NAME "q1-5" )
add_subdirectory ( ${TARGET_NAME} )

set ( TARGET_NAME "q1-6" )
add_subdirectory ( ${TARGET_NAME} )

set ( TARGET_NAME "q1-8" )
add_subdirectory ( ${TARGET_NAME} )

set ( TARGET_NAME "q1-9" )
add_subdirectory ( ${TARGET_NAME} )
